<resources>
    <string name="app_name">SubmisiIntermediate</string>
    <string name="maps_api_key">AIzaSyCOUTTcXthwGgwnnCqYQWIAC3W1nY-vAPk</string>
    <string name="title_welcome_page">Selamat Datang di TrueStory!</string>
    <string name="message_welcome_page">Nikmati pajangan foto yang diberikan untuk menikmati dunia mu!</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="title_signup_page">Daftar Akun TrueStory di bawah ini!</string>
    <string name="title_login_page">Masuk Login cuy!</string>
    <string name="message_login_page">Isi data di bawah dulu!</string>
    <string name="message_main_page">Selamat Datang di TrueStory!</string>
    <string name="logout">Keluar</string>
    <string name="text_description">Isi Deskripsi</string>
    <string name="date_photo">Tanggal dibuat</string>
    <string name="img_detail">Gambar Halaman Detail Story</string>
    <string name="photo_detail">Photo Detail Story</string>
    <string name="img_story">Gambar Story</string>
    <string name="language_setting">Pengaturan Bahasa</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description">Deskripsi</string>
    <string name="Upload">Kirim</string>
    <string name="img_upload">Gambar untuk Upload</string>
    <string name="button_upload">button upload</string>
    <string name="input_your_name">Masukan Nama Anda</string>
    <string name="fail_to_get_image">Gagal untuk mengambil gambar.</string>
    <string name="fail_to_open_camera">Gagal untuk membuka kamera.</string>
    <string name="input_your_email">Masukkan Email Anda</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="input_your_password">Masukkan Password Anda</string>
    <string name="password_must_8">Password tidak boleh kurang dari 8 karakter</string>
    <string name="great">Mangtap!</string>
    <string name="login_success">Login Berhasil, Silahkan Masuk!</string>
    <string name="bruh">Waduhh!</string>
    <string name="login_fail">Login Gagal, Email tidak valid!!</string>
    <string name="hm">Hmmmm!</string>
    <string name="login_fail_user_not_found">Login Gagal, User Tidak Ditemukan!!</string>
    <string name="input_name">Masukan Nama</string>
    <string name="input_password">Masukan Password</string>
    <string name="truestory_app">TrueStory! App</string>
    <string name="acc_success">Akun berhasil dibuat</string>
    <string name="acc_fail_create">Akun gagal dibuat</string>
    <string name="name_not_blank">Nama tidak boleh kosong</string>
    <string name="email_not_blank">Email tidak boleh kosong</string>
    <string name="password_not_blank">Password tidak boleh kosong</string>
    <string name="desc_not_blank">Deskripsi tidak boleh kosong</string>
    <string name="image_not_blank">Gambar tidak boleh kosong</string>
    <string name="select_image">Pilih Gambar</string>
    <string name="cant_access">Tidak mendapat Izin</string>
    <string name="location_photo">Lokasi Tidak Tersedia</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Tipe Normal</string>
    <string name="satellite_type">Tipe Satellite</string>
    <string name="terrain_type">Tipe Medan</string>
    <string name="hybrid_type">Tipe Hibrid</string>
    <string name="maps">Peta</string>
    <string name="try_again">Coba Ulang</string>
    <string name="fail_upload_file">Gagal mengunggah file!</string>
    <string name="icon_location">Ikon Lokasi</string>
    <string name="set_location">Atur Lokasi</string>
    <string name="maps_location">Peta Lokasi</string>
    <string name="failed_get_location">Gagal mengambil lokasi!</string>
    <string name="your_location">Lokasi saya</string>
    <string name="gaint_access">Mendapat Izin</string>
    <string name="get_location">Mendapatkan Lokasi</string>
    <string name="switch_camera">Mengganti Kamera</string>
    <string name="take_photo">Mengambil gambar</string>
    <string name="img_login_page">Gambar Login Page</string>
    <string name="img_register">Gambar Daftar Akun</string>
    <string name="img_welcome">Gambar welcome</string>
    <string name="style_parsing_failed">Penguraian gaya gagal.</string>
    <string name="can_t_find_style_error">"Tidak dapat menemukan gaya. Kesalahan: "</string>

</resources>